ops/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raclavsky-deployment
  labels:
    app: raclavsky
  namespace: raclavskycz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raclavsky
  template:
    metadata:
      labels:
        app: raclavsky
    spec:
      imagePullSecrets:
        - name: dockerhubcred
      containers:
        - name: raclavsky
          image: voxfpd/raclavsky-cz:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
