ops/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: raclavsky-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: raclavsky

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-k3s-ingress-rule
spec:
  entryPoints:
    - websecure
  tls:
    secretName: raclavsky-root-cert-secret
  routes:
    - match: Host(`raclavsky.k3s.raclavsky.cz`, `www.raclavsky.k3s.raclavsky.cz`)
      kind: Rule
      services:
        - name: raclavsky-service
          port: 80
          scheme: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-k3s-http-ingress-rule
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`raclavsky.k3s.raclavsky.cz`, `www.raclavsky.k3s.raclavsky.cz`)
      kind: Rule
      middlewares:
        - name: redirectscheme
          namespace: traefik
      services:
        - name: raclavsky-service
          port: 80
          scheme: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-ingress-rule
spec:
  entryPoints:
    - websecure
  tls:
    secretName: raclavsky-cert-secret
  routes:
    - match: Host(`raclavsky.cz`, `www.raclavsky.cz`)
      kind: Rule
      services:
        - name: raclavsky-service
          port: 80
          scheme: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-http-ingress-rule
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`raclavsky.cz`, `www.raclavsky.cz`)
      kind: Rule
      middlewares:
        - name: redirectscheme
          namespace: traefik
      services:
        - name: raclavsky-service
          port: 80
          scheme: http

---
