ops/kubernetes/stack.yml
apiVersion: v1
kind: Service
metadata:
  name: raclavsky-service
  namespace: raclavskycz
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: raclavsky
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: raclavsky
  name: raclavsky-deployment
  namespace: raclavskycz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raclavsky
  template:
    metadata:
      labels:
        app: raclavsky
    spec:
      containers:
      - image: voxfpd/raclavsky-cz:65bfda4
        name: raclavsky
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      imagePullSecrets:
      - name: dockerhubcred
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-http-ingress-rule
  namespace: raclavskycz
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`raclavsky.cz`, `www.raclavsky.cz`)
    middlewares:
    - name: redirectscheme
      namespace: traefik
    services:
    - name: raclavsky-service
      port: 80
      scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-ingress-rule
  namespace: raclavskycz
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`raclavsky.cz`, `www.raclavsky.cz`)
    services:
    - name: raclavsky-service
      port: 80
      scheme: http
  tls:
    secretName: raclavsky-cert-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-k3s-http-ingress-rule
  namespace: raclavskycz
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`raclavsky.k3s.raclavsky.cz`, `www.raclavsky.k3s.raclavsky.cz`)
    middlewares:
    - name: redirectscheme
      namespace: traefik
    services:
    - name: raclavsky-service
      port: 80
      scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raclavsky-k3s-ingress-rule
  namespace: raclavskycz
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`raclavsky.k3s.raclavsky.cz`, `www.raclavsky.k3s.raclavsky.cz`)
    services:
    - name: raclavsky-service
      port: 80
      scheme: http
  tls:
    secretName: raclavsky-root-cert-secret
